# feHMM

./: CODE_GUIDE.TXT  LICENSE  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
demo/elliptic/: Makefile.in  README  VTKProcess.py  ellipt.cpp
demo/elliptic/Macro/: macro2dUser.amc
m4/: acx_mpi.m4
src/: Makefile.am  Makefile.in
src/common/: CAlbertaInterface.cpp  CAlbertaInterface.h  CAlbertaInterfacePar.cpp  CAlbertaInterfacePar.h  CLevel.cpp  CLevel.h  CLevelMPI.cpp  CLevelPar.cpp  CLevelPar.h  CTimePartitioning.cpp  CTimePartitioning.h  CUserData.cpp  CUserData.h  CUserDataPar.cpp  CUserDataPar.h  ErrorReturnCodes.h  Makefile.am  Makefile.am.include  Makefile.am.include~  Makefile.in  Makefile_mpi.am.include  Makefile_mpi.am.include~  SaveToVTK.cpp  SaveToVTK.h  SaveToVTKpar.cpp  SaveToVTKpar.h  ellipt.cpp  feHMM.cpp  feHMM.h  feHMMpar.cpp  feHMMpar.h  feHMMtest.cpp
src/feHMM_1d/: Makefile.am  Makefile.in
src/feHMM_1d_debug/: Makefile.am  Makefile.in
src/feHMM_2d/: Makefile.am  Makefile.in
src/feHMM_2d_debug/: Makefile.am  Makefile.in
src/feHMM_3d/: Makefile.am  Makefile.in
src/feHMM_3d_debug/: Makefile.am  Makefile.in
src/mpi/: Makefile.am  Makefile.in
src/mpi/feHMM_1d/: Makefile.am  Makefile.in
src/mpi/feHMM_1d_debug/: Makefile.am  Makefile.in
src/mpi/feHMM_2d/: Makefile.am  Makefile.in
src/mpi/feHMM_2d_debug/: Makefile.am  Makefile.in
src/mpi/feHMM_3d/: Makefile.am  Makefile.in
src/mpi/feHMM_3d_debug/: Makefile.am  Makefile.in
