pkginclude_HEADERS = CAlbertaInterface.h \
CAlbertaInterfacePar.h \
CUserData.h \
CUserDataPar.h \
CLevel.h \
CLevelPar.h \
CTimePartitioning.h \
ErrorReturnCodes.h \
feHMM.h \
feHMMpar.h \
SaveToVTK.h \
SaveToVTKpar.h

#pkgdata_DATA = Makefile.feHMM 
# -> how to build sources - an exapmle of Makefile - see pkg; not done yet

include $(srcdir)/Makefile.am.include

EXTRA_DIST = $(sources)
